// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager #initialize gas cost 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 71315,
}
`;

exports[`PoolManager #lock gas overhead of no-op lock 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 41718,
}
`;

exports[`PoolManager #mint gas cost 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 310400,
}
`;

exports[`PoolManager #mint gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 310410,
}
`;

exports[`PoolManager #swap gas cost 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 71028,
}
`;

exports[`PoolManager #swap gas cost for swap against liquidity 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 203221,
}
`;

exports[`PoolManager #swap gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 75124,
}
`;

exports[`PoolManager bytecode size 1`] = `21789`;
